--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+* {
+  box-sizing: border-box;
+}
+
+:root {
+  --black: #000000;
+  --white: #FFFFFF;
+  --bg-header: rgba(30, 9, 6, 0.15);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
