--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,10 +1,34 @@
-.header {
-  background-color: var(--bg-header);
+.header__top {
   padding: 20px 0;
+  background-color: var(--bg-header);
+}
+
+.header__bottom {
+  background-image: url('../../img/lines.png');
+  background-position: 0 24px;
+  background-repeat: no-repeat;
+  background-size: 100% 74px;
+  height: 213px;
+  position: relative;
+
+  @media only screen and (min--moz-device-pixel-ratio: 2),
+    only screen and (-o-min-device-pixel-ratio: 2/1),
+    only screen and (-webkit-min-device-pixel-ratio: 2),
+    only screen and (min-device-pixel-ratio: 2) {
+    background-image: url('../../img/lines@2x.png');
+  }
 }
 
 .header__container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.header__image {
+  width: 878px;
+  height: 282px;
+  position: absolute;
+  right: 0;
+  top: -34px;
 }
