--- a/public/index.css
+++ b/public/index.css
@@ -8,8 +8,13 @@
   --bg-header: rgba(30, 9, 6, 0.15);
   --dark: #474747;
   --light-grey: #C1C1C1;
-  --accent: #E27F00;
   --medium-grey: #6C6C6C;
+  --dark-grey: #9F9E9E;
+  --button-grey-hover:  #585757;
+  --accent: #E27F00;
+  --accent-hover: #FFA839;
+  --accent-active: #DA8B26;
+  --red: #F20505;
 }
 
 body {
