--- a/src/components/filters/filters.scss
+++ b/src/components/filters/filters.scss
@@ -1,6 +1,56 @@
-.filters {
-  width: 208px;
-  height: 800px;
-  margin-right: 32px;
-  background-color: aliceblue;
+.filters__heading {
+  padding-bottom: 30px;
+}
+
+.filters__fieldset {
+  padding: 0;
+  border: none;
+}
+.filters__container {
+  width: 100%;
+  padding: 30px 0 31px 0;
+  border-top: 0.7px solid #dddada;
+}
+
+.filters__input-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 31px;
+}
+
+.filters__heading,
+.filters__text {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 21px;
+}
+
+.filters__text {
+  padding-bottom: 24px;
+}
+
+.filters__price {
+  width: 84px;
+  font-size: 14px;
+  line-height: 10px;
+  letter-spacing: 0.05em;
+  padding: 5px 3px 5px 20px;
+  border: 0.7px solid #9f9e9e;
+  border-radius: 2px;
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.filters__line {
+  width: 14px;
+  margin: 0 5px;
+  border: 1px solid #585757;
+}
+
+.filters__checkbox {
+  margin-bottom: 12px;
+}
+
+.filters__button {
+  margin-top: 10px;
 }
