--- a/src/components/main-page/main-page.scss
+++ b/src/components/main-page/main-page.scss
@@ -1,14 +1,14 @@
-.main {
+.main-page {
   display: flex;
   margin-top: 50px;
 }
 
-.main__filters {
+.main-page__filters {
   width: 208px;
   margin-right: 32px;
   flex: 0 0 auto;
 }
 
-.main__catalog {
+.main-page__catalog {
   flex: 1 1 auto;
 }
