--- a/src/components/filters/filters.scss
+++ b/src/components/filters/filters.scss
@@ -31,11 +31,12 @@
 }
 
 .filters__price {
+  text-align: center;
   width: 84px;
   font-size: 14px;
   line-height: 10px;
   letter-spacing: 0.05em;
-  padding: 5px 3px 5px 20px;
+  padding: 5px;
   border: 0.7px solid #9f9e9e;
   border-radius: 2px;
   color: rgba(0, 0, 0, 0.6);
