refactor semantics of header and footer

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -88,6 +88,12 @@
   }
 }
 
+.footer__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
 .footer__contact-icon {
   margin-right: 7px;
 }
