--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -34,10 +34,14 @@
   top: -34px;
 }
 
-.header__icons {
+.header__list {
   display: flex;
   align-items: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
+
 .header__icon {
   margin: 0 36px;
   color: var(--black);
