--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -27,19 +27,24 @@
     background-color: var(--dark-grey);
   }
 
-  // &--ghost {
-  //   background-color: transparent;
+  &--ghost {
+    color: var(--button-grey-hover);
+    background-color: transparent;
+    border: 1px solid var(--button-grey-hover);
 
-  //   &:hover,
-  //   &:focus,
-  //   &:active {
-  //     color: var(--dark);
-  //   }
+    &:hover,
+    &:focus,
+    &:active {
+      opacity: 0.7;
+      background-color: transparent;
+      border: 1px solid rgba(136, 67, 67, 0.7);
+    }
 
-  //   &:active {
-  //     opacity: 0.5;
-  //   }
-  // }
+    &:active {
+      opacity: 0.5;
+      border: 1px solid rgba(88, 87, 87, 0.5);
+    }
+  }
 
   &--accent {
     color: var(--white);
