add sorting to main page

--- a/src/components/arrow-button/arrow-button.scss
+++ b/src/components/arrow-button/arrow-button.scss
@@ -7,13 +7,16 @@
     fill: var(--black);
 
     &:hover,
-    &:focus,
     &:active {
       fill: var(--medium-grey);
     }
 
     &:active {
       opacity: 0.5;
+    }
+
+    &--active {
+      fill: var(--medium-grey);
     }
   }
 
