--- a/public/index.css
+++ b/public/index.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
 }
 
+
 :root {
   --black: #000000;
   --white: #FFFFFF;
@@ -22,6 +23,15 @@
   --opaque-grey: #bcbcbc;
 }
 
+html, body, #root {
+  height: 100%;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+}
+
 body {
   margin: 0;
   font-family: 'Droid Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -30,6 +40,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 
 @font-face {
   font-family: 'Droid Sans';
