fix layout of main page

--- a/src/components/catalog/catalog.scss
+++ b/src/components/catalog/catalog.scss
@@ -1,12 +1,11 @@
-.catalog {
-}
-
 .catalog__list {
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
+  margin: 0 -10px;
 }
 
 .catalog__item {
-  width: 31%;
+  max-width: 220px;
+  margin: 0 10px 30px;
+  flex: 1 1 auto;
 }
