--- a/src/components/arrow-button/arrow-button.scss
+++ b/src/components/arrow-button/arrow-button.scss
@@ -2,6 +2,7 @@
   border: none;
   padding: 0;
   background-color: transparent;
+  margin: 0px 10px 0 0px;
 
   .arrow-button__icon {
     fill: var(--black);
