--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -30,7 +30,7 @@
 }
 
 .header__image {
-  max-width: 878px;
+  max-width: 819px;
   width: 100%;
   height: auto;
   position: absolute;
@@ -43,10 +43,11 @@
   list-style: none;
   padding: 0;
   margin: 0;
+  margin-left: 8px;
 }
 
 .header__icon {
-  margin: 0 36px;
+  margin: 0 18px;
   color: var(--black);
 
   &:hover,
@@ -61,13 +62,18 @@
 }
 
 .header__icon:last-child {
-  margin-right: 0;
+  margin-right: 17px;
+}
+
+.header__link {
+  position: relative;
 }
 
 .header__items-count {
+  right: 35px;
+  position: absolute;
   height: 23px;
   font-size: 10px;
   line-height: 12px;
-  margin-left: 3px;
   color: var(--red);
 }
