--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -4,11 +4,12 @@
   list-style: none;
   padding: 0;
   margin: 0;
+  margin-left: -18px;
 }
 
 .navigation__link {
   display: inline-block;
-  margin: 0 20px;
+  margin: 0 22px;
   text-decoration: none;
   font-size: 14px;
   line-height: 20px;
