--- a/src/components/checkout-item/checkout-item.scss
+++ b/src/components/checkout-item/checkout-item.scss
@@ -2,23 +2,24 @@
   position: relative;
   display: flex;
   align-items: center;
-  padding: 20px 0;
+  padding: 20px 0 19px;
   border-bottom: 0.7px solid #dddada;
 
-  &:first-child {
+  &:first-of-type {
     border-top: 0.7px solid #dddada;
-    margin-top: 29px;
+    margin-top: 28px;
   }
 }
 
 .checkout-item__delete-button {
   position: absolute;
-  top: 23px;
-  left: 3px;
+  top: 12px;
+  left: -6px;
   background-color: transparent;
   border: none;
   color: var(--dark-grey);
   cursor: pointer;
+  padding: 10px;
 
   &:hover {
     color: var(--grey);
@@ -32,8 +33,9 @@
 .checkout-item__image-container {
   display: flex;
   justify-content: center;
-  width: 152px;
+  width: 136px;
   height: auto;
+  margin-right: 24px;
 }
 
 .checkout-item__image {
@@ -41,7 +43,7 @@
 }
 
 .checkout-item__info {
-  max-width: 35%;
+  max-width: 342px;
   width: 100%;
   align-self: flex-start;
   margin: 0;
@@ -52,26 +54,26 @@
   font-weight: bold;
   font-size: 16px;
   line-height: 15px;
-  letter-spacing: 0.05em;
+  letter-spacing: 1.2px;
   text-transform: uppercase;
   margin-bottom: 14px;
 }
 
 .checkout-item__description {
-  margin: 0;
+  margin: 0 0 6px;
   font-size: 14px;
   line-height: 15px;
-  letter-spacing: 0.05em;
+  letter-spacing: 1.2px;
   text-transform: capitalize;
 }
 
 .checkout-item__price {
   white-space: nowrap;
-  margin: 0 10px;
-  width: 172px;
+  margin: 4px 15px 0;
   font-size: 20px;
-  line-height: 15px;
-  letter-spacing: 0.05em;
+  letter-spacing: 1.2px;
+  flex: 1 1 auto;
+  max-width: 156px;
 
   &--bold {
     text-align: end;
@@ -114,7 +116,8 @@
 .checkout-item__amount-block {
   display: flex;
   align-items: center;
-  margin-bottom: 71px;
   border-top: 1px solid var(--dark-grey);
   border-bottom: 1px solid var(--dark-grey);
+  margin-top: 20px;
+  align-self: flex-start;
 }
