--- a/src/components/checkout-page/checkout-page.scss
+++ b/src/components/checkout-page/checkout-page.scss
@@ -63,3 +63,10 @@
   padding: 10px;
   letter-spacing: 1.3px;
 }
+.checkout-page__error {
+  font-size: 12px;
+  line-height: 15px;
+  letter-spacing: 0.9px;
+  color: var(--red);
+  margin-top: 8px;
+}
