--- a/src/components/confirmation-popup/confirmation-popup.scss
+++ b/src/components/confirmation-popup/confirmation-popup.scss
@@ -5,9 +5,11 @@
 
 .confirmation-popup__button {
   font-size: 16px;
-  padding: 13px 17px;
+  line-height: 16px;
+  padding: 12px 6px 14px;
   width: 100%;
   height: 46px;
   max-width: 220px;
   margin: 0 19px 0 18px;
+  letter-spacing: 1.5px;
 }
