--- a/src/components/popup/popup.scss
+++ b/src/components/popup/popup.scss
@@ -1,8 +1,13 @@
 .popup {
-  position: relative;
+  position: absolute;
   max-width: 740px;
   width: 100%;
   padding: 30px 50px;
+  border-radius: 4px;
+  margin: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .popup__heading {
@@ -10,7 +15,7 @@
   font-weight: bold;
   font-size: 18px;
   line-height: 15px;
-  letter-spacing: 0.02em;
+  letter-spacing: 0.9px;
   color: var(--dark);
 }
 
