--- a/src/components/sort/sort.scss
+++ b/src/components/sort/sort.scss
@@ -21,6 +21,7 @@
   background-color: transparent;
   border: none;
   margin-left: 19px;
+  cursor: pointer;
 
   &:hover,
   &:active {
@@ -38,4 +39,8 @@
   &:not(:nth-child(1)) {
     margin-left: 27px;
   }
+}
+
+.sort__arrow-button {
+  cursor: pointer;
 }
