--- a/public/index.css
+++ b/public/index.css
@@ -73,3 +73,14 @@ code {
   white-space: nowrap;
   width: 1px;
 }
+
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance:textfield;
+}
