--- a/public/index.css
+++ b/public/index.css
@@ -84,3 +84,7 @@ input::-webkit-inner-spin-button {
 input[type=number] {
     -moz-appearance:textfield;
 }
+
+*:focus {
+  outline: 2px solid #0769eb;
+}
